fixed contact style on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
 .content {
     width: 100%;
     height: 100%;
+    max-width: 2000px;
     display: flex;
     flex-direction: row;
+    margin: auto;
 
     .main {
         height: 100%;
