--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -3,16 +3,19 @@
 
 #contact {
     padding-inline: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     .headline {
         @include fluid-type(320px, 2000px, 50px, 150px);
-        max-width: 50%;
+        max-width: 70%;
         margin: 0;
     }
 
     .socials {
         .social-icon {
-            height: 100px;
+            @include fluid-size(320px, 2000px, 50px, 150px);
             margin: 20px;
         }
     }
